# memory-synapse-scaling

./: .gitignore  README.md
cpp/: CMakeLists.txt  main.cpp  test.cpp  tetzlaff.cpp  todo.md
cpp/includes/: base.h  geometry.h  initializer.h  model.h  recorder.h  solver.h
